# pbw-backend

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml
migrations/2025-09-15-235401-0000_create_posts/: up.sql
migrations/2025-09-16-004007-0000_accurate_posts_table/: down.sql  up.sql
src/: lib.rs  main.rs  schema.rs
src/config/: statics.rs
src/connections/: connections.rs  mod.rs
src/database/: main.rs  mod.rs  models.rs
src/grid/: grid.rs  mod.rs
src/listener/: listener.rs  mod.rs
src/render/: image.rs  mod.rs  net.rs
