[package]
name = "backendcompiler"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
warp = "0.3"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.31"
