[package]
name = "backendcompiler"
version = "0.1.0"
edition = "2024"


[dependencies]
tokio = { version = "1.0", features = ["full"] }
tokio-tungstenite = "0.26.2"
warp = "0.3"
mlua = { version = "0.10", features = ["lua54", "vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures-util = "0.3.31"
image = "0.25.6"
uuid = { version = "0.8", features = ["v4", "serde"] } 
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15"
aws-sdk-s3 = {version = "1.106.0", features = ["behavior-version-latest"]}
